feat: added apis for managing loans at admin side
